fixed alignment issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -22,13 +22,14 @@ body {
 	margin-right: auto;
 	margin-top: 15vh;
 	margin-bottom: 15vh;
+	text-align: center;
 }
 
 img.pic {
     display: block;
 		filter: blur(10px);
-		max-width: 100%;
-		max-height: 100%;
+		max-width: 85%;
+    max-height: 100vh;
 		margin-left: auto;
 		margin-right: auto;
 		width: 100%;
@@ -36,7 +37,20 @@ img.pic {
 
 img.pic.loaded {
 		filter: blur(0px);
-		/* width: auto; */
+		width: auto;
+}
+
+@media only screen and ( max-width:1024px) {
+	ul#menu {
+    position: relative;
+    width: 100%;
+    height: auto;
+	}
+
+	ul#menu li {
+		float: left;
+    margin-right: 20px;
+	}
 }
 
 #menu {
